Ensures scrollbars are working on bottom nav demo

--- a/bottom-nav-menu/site.css
+++ b/bottom-nav-menu/site.css
@@ -11,13 +11,38 @@ html {
 body {
     background-color: lightgray;
     width: 100vw;
-    height: 100vh;    
+    height: 100vh;
     font-family: sans-serif;
     font-size: 16px;
+    line-height: 1.6;
+    overflow: hidden;
 }
 
 a {
     text-decoration: none;
+}
+
+h1 {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+}
+
+h3 {
+    font-size: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+p {
+    margin-bottom: 1rem;
+}
+
+main {
+    width: 100vw;
+    height: calc(100vh - 60px);
+    max-height: calc(100vh - 60px);
+    padding: 2rem 5vw;
+    overflow-y: scroll;
 }
 
 footer {
@@ -30,7 +55,7 @@ footer {
     box-shadow: inset 0 1px 0 0 darkgray;
 }
 
-.footer-list { 
+.footer-list {
     display: block;
     position: absolute;
     left: 50%;
@@ -40,12 +65,12 @@ footer {
 }
 
 .footer-list-item {
-    display: inline-block;    
+    display: inline-block;
 }
 
-.footer-link {        
-    padding: 8px;  
-    color: darkgray;      
+.footer-link {
+    padding: 8px;
+    color: darkgray;
 }
 
 .footer-link::after {
